--- a/client/src/index.less
+++ b/client/src/index.less
@@ -13,3 +13,37 @@ body {
   flex-direction: column;
   min-height: 100vh;
 }
+
+.ant-list-item-meta-avatar {
+  margin-right: 0px;
+}
+
+.ant-card-body {
+  padding: 0;
+}
+
+.ant-form {
+  padding: 24px;
+}
+
+.ant-list-pagination {
+  padding: 24px;
+  margin-top: 0;
+}
+
+@media only screen and (max-width: 600px) {
+  .ant-layout-header {
+    padding: 0 10px;
+    & > div {
+      width: 80px;
+      height: 80px;
+    }
+  }
+  .ant-layout-content {
+    padding: 0px !important;
+  }
+
+  .ant-list-item {
+    flex-wrap: wrap;
+  }
+}
